SERVER-73763: Ensure zones are extended for config.tags docs