src/mongo/db/s/resharding/resharding_coordinator_test.cpp
@@ -622,7 +622,8 @@ protected:
         std::vector<BSONObj> zones;
         if (expectedCoordinatorDoc.getZones()) {
             zones = buildTagsDocsFromZones(expectedCoordinatorDoc.getTempReshardingNss(),
-                                           *expectedCoordinatorDoc.getZones());
+                                           *expectedCoordinatorDoc.getZones(),
+                                           _newShardKey);
         }
         expectedCoordinatorDoc.setZones(boost::none);
         expectedCoordinatorDoc.setPresetReshardedChunks(boost::none);
